<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory 
        android:title="@string/pref_category_general"
        app:iconSpaceReserved="false">
        
        <Preference
            android:key="select_image"
            android:title="@string/pref_select_image_title"
            android:summary="@string/pref_select_image_summary"
            android:icon="@drawable/ic_image"
            app:iconSpaceReserved="true" />

        <SwitchPreferenceCompat
            android:key="enable_module"
            android:title="@string/pref_enable_module_title"
            android:summary="@string/pref_enable_module_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_power"
            app:iconSpaceReserved="true" />

        <SwitchPreferenceCompat
            android:key="spoof_viewfinder"
            android:title="Spoof Viewfinder"
            android:summary="Show the injected image in the live camera preview"
            android:defaultValue="true"
            android:icon="@drawable/ic_image"
            app:iconSpaceReserved="true" />

        <ListPreference
            android:key="injection_mode"
            android:title="Injection Intensity"
            android:summary="Choose how deeply to hook the camera system"
            android:entries="@array/injection_mode_entries"
            android:entryValues="@array/injection_mode_values"
            android:defaultValue="0"
            android:icon="@drawable/ic_picker"
            app:iconSpaceReserved="true" />
        
        <SwitchPreferenceCompat
            android:key="show_notifications"
            android:title="@string/pref_show_notifications_title"
            android:summary="@string/pref_show_notifications_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications"
            app:iconSpaceReserved="true" />
        
        <SwitchPreferenceCompat
            android:key="use_custom_picker"
            android:title="@string/pref_use_custom_picker_title"
            android:summary="@string/pref_use_custom_picker_summary"
            android:defaultValue="false"
            android:icon="@drawable/ic_picker"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/pref_category_apps"
        app:iconSpaceReserved="false">
        
        <Preference
            android:key="select_apps"
            android:title="@string/pref_select_apps_title"
            android:summary="@string/pref_select_apps_summary"
            android:icon="@drawable/ic_apps"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_category_logging"
        app:iconSpaceReserved="false">
        
        <SwitchPreferenceCompat
            android:key="enable_logging"
            android:title="@string/pref_enable_logging_title"
            android:summary="@string/pref_enable_logging_summary"
            android:defaultValue="true"
            android:icon="@drawable/ic_debug"
            app:iconSpaceReserved="true" />
        
        <Preference
            android:key="view_logs"
            android:title="@string/pref_view_logs_title"
            android:summary="@string/pref_view_logs_summary"
            android:icon="@drawable/ic_logs"
            app:iconSpaceReserved="true" />
        
        <Preference
            android:key="clear_logs"
            android:title="@string/pref_clear_logs_title"
            android:summary="@string/pref_clear_logs_summary"
            android:icon="@drawable/ic_clear"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_category_about"
        app:iconSpaceReserved="false">
        
        <Preference
            android:key="version"
            android:title="@string/pref_version_title"
            android:summary="@string/app_version"
            android:icon="@drawable/ic_info"
            app:iconSpaceReserved="true"
            android:selectable="false" />
        
        <Preference
            android:key="help"
            android:title="@string/pref_help_title"
            android:summary="@string/pref_help_summary"
            android:icon="@drawable/ic_help"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>

</PreferenceScreen>